--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa quia provident a minus ut explicabo corrupti cumque vitae officia odio, quas modi, ea esse. Officia commodi repellat quod quas explicabo?</p>
 </body>
+<script src="js/main.js"></script>
 </html> 
