--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TEST DE VSC</title>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa quia provident a minus ut explicabo corrupti cumque vitae officia odio, quas modi, ea esse. Officia commodi repellat quod quas explicabo?</p>
